[package]
name = "chemical-balancer"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Chemical equation balancer"
repository = "https://github.com/oovm/chemical-balancer"
documentation = "https://docs.rs/chemical-balancer"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
pex = "0.0.1"

[dev-dependencies]

[features]
default = []
